--- a/HTML/log.html
+++ b/HTML/log.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="log.css">
+    <link rel="stylesheet" href="../CSS/log.css">
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                 <button type="submit" class="btn">LOGIN</button>
 
                 <div class="register">
-                    <p>Dont have an account?<a href="sign.html">SIGNUP</a></p>
+                    <p>Dont have an account?<a href="../HTML/sign.html">SIGNUP</a></p>
                 </div>
 
             </form>
