--- a/HTML/offer Ride.html
+++ b/HTML/offer Ride.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offer a Ride</title>
-    <link rel="stylesheet" href="offer Ride.css">   
+    <link rel="stylesheet" href="../CSS/offer Ride.css">   
 </head>
 
 <body>
@@ -18,12 +18,12 @@
            </div>
 
            <div class="nav">
-               <a href="offer Ride.html">Find a Ride</a>
-               <a href="offer pool.html">Offer a Ride</a>
+               <a href="../HTML/offer Ride.html">Find a Ride</a>
+               <a href="../HTML/offer pool.html">Offer a Ride</a>
               <div>
-                  <a href="home.html">Home</a> |
-                  <a href="profile.html">Profile</a> |
-                  <a href="log.html">Logout</a>
+                  <a href="../HTML/home.html">Home</a> |
+                  <a href="../HTML/profile.html">Profile</a> |
+                  <a href="../HTML/log.html">Logout</a>
               </div>
            </div>
 
