--- a/HTML/offer pool.html
+++ b/HTML/offer pool.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Offer Carpool</title>
-    <link rel="stylesheet" href="offer pool.css">      
+    <link rel="stylesheet" href="../CSS/offer pool.css">      
 </head>
 
 <body>
@@ -16,9 +16,9 @@
         </div>
 
         <div class="menu">
-            <a href="offer Ride.html">Find Carpool</a>
-            <a href="offer pool.html">Offer Carpool</a>
-            <a href="profile.html">Profile</a>
+            <a href="../HTML/offer Ride.html">Find Carpool</a>
+            <a href="../HTML/offer pool.html">Offer Carpool</a>
+            <a href="../HTML/profile.html">Profile</a>
         </div>
 
         <div class="content">
@@ -53,7 +53,7 @@
 
                 <div class="inputs">
                     <select name="carType" required>
-                        <option value="">Select Car Type</option>
+                        <option value="car Type">carType</option>
                         <option value="sedan">Sedan</option>
                         <option value="suv">SUV</option>
                         <option value="hatchback">Hatchback</option>
