--- a/HTML/Ride.html
+++ b/HTML/Ride.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find  Ride</title>
-    <link rel="stylesheet" href="Ride.css">
+    <link rel="stylesheet" href="../CSS/Ride.css">
 </head>
 
 <body>
