--- a/HTML/main.html
+++ b/HTML/main.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width-device-width,initial-scale=1">
         <title>Carpooling</title>
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="../CSS/main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;
@@ -17,7 +17,7 @@
         <section class="header">
 
             <nav>
-                <img src="carpool.png" class="logo"  alt="logo">
+                <img src="../Images/carpool.png" class="logo"  alt="logo">
                 <div class="links">
                     <ul>
                         <li><a href="log.html">LOGIN</a></li>
@@ -32,6 +32,8 @@
             </div>
 
         </section>
+        
+            
 
     </body>
 
