--- a/HTML/sign.html
+++ b/HTML/sign.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Signup Page</title>
-    <link rel="stylesheet" href="sign.css">
+    <link rel="stylesheet" href="../CSS/sign.css">
 </head>
 
 <body>
